--- a/HTML/Hospital.html
+++ b/HTML/Hospital.html
@@ -56,30 +56,30 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/teaching.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <p class="card-text fs-6 fw-medium">Maharajgunj,Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>        
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/Bir Hospital.jpeg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title">Bir Hospital</h5>
+              <p class="card-text fs-6 fw-medium">Kanti Path, Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/kantijpg.jpg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title">Kanti Children’s Hospital</h5>
+              <p class="card-text fs-6 fw-medium">Maharajgunj,Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
@@ -89,30 +89,30 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/grande.jpeg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title">Grande Hospital</h5>
+              <p class="card-text fs-6 fw-medium">Tokha Rd, Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/Norvic.jpg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title">Norvic International Hospital</h5>
+              <p class="card-text fs-6 fw-medium">Thapathali, Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/Vayodha Hospital.jpg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title">Vayodha Hospital</h5>
+              <p class="card-text fs-6 fw-medium">Balkhu, Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
@@ -122,30 +122,30 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/nepal-medicit.jpg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title">Nepal Mediciti</h5>
+              <p class="card-text fs-6 fw-medium">Bhaisepati Lalitpur</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/teku.jpg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title">Teku Hospital</h5>
+              <p class="card-text fs-6 fw-medium">Teku, Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow p-3 mb-5 bg-body-tertiary rounded">
-            <img src="/Images/docSe.png" class="card-img-top" alt="">
+            <img src="/Images/Hospital/Kantipur.jpg" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-light">Maharajgunj,Kathmandu</p>
+              <h5 class="card-title"> Kantipur Hospital</h5>
+              <p class="card-text fs-6 fw-medium">Shriganesh Marg, Tripureshwor</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
