--- a/HTML/Medicine.html
+++ b/HTML/Medicine.html
@@ -38,7 +38,7 @@
                 </a>
                 </li>
                 <li class="nav-item">
-              <a class="nav-link active fw-medium" aria-current="page" href="#">Home</a>
+              <a class="nav-link active fw-medium" aria-current="page" href="/HTML/index.html">Home</a>
              </li>
 
                 <li class="nav-item">
@@ -67,7 +67,7 @@
       <div class="row gy-3">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Sinex.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Sinex.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Sinex Tab</div>
               <p class="card-text fs-6">Rs.30</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/CTZ Tab.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/CTZ Tab.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">CTZ Tab</div>
               <p class="card-text fs-6">Rs.56</p>
@@ -87,7 +87,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Aceclo SR Tab.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Aceclo SR Tab.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Aceclo SR Tab</div>
               <p class="card-text fs-6">Rs.113</p>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Flagyl.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Flagyl.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Flagyl 200 mg </div>
               <p class="card-text fs-6">Rs.17</p>
@@ -108,7 +108,7 @@
         <!--Second Row-->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Entosec.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Entosec.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Entosec -1000mg</div>
               <p class="card-text fs-6">Rs.58</p>
@@ -118,7 +118,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/amtas.jpg" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/amtas.jpg" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Amtas -10mg</div>
               <p class="card-text fs-6">Rs.120</p>
@@ -128,7 +128,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Clonaz.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Clonaz.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Clonaz- 0.25mg</div>
               <p class="card-text fs-6">Rs.60</p>
@@ -138,7 +138,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Lobazam.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Lobazam.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Lobazam -5mg</div>
               <p class="card-text fs-6">Rs.84</p>
@@ -149,7 +149,7 @@
         <!--Third Row-->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Parken-Plus.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Parken-Plus.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Parkin-Plus -7mg</div>
               <p class="card-text fs-6">Rs.58</p>
@@ -159,7 +159,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Zecal-Max.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Zecal-Max.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Zecal-Max Tab</div>
               <p class="card-text fs-6">Rs.656</p>
@@ -169,7 +169,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Fempro.jpeg" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Fempro.jpeg" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Fempro -2.5mg</div>
               <p class="card-text fs-6">Rs.112</p>
@@ -179,7 +179,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Hiora Mouthwash.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Hiora Mouthwash.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Hiora Mouthwash Regular</div>
               <p class="card-text fs-6">Rs.144</p>
@@ -190,7 +190,7 @@
         <!--fourth Row-->
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Cortilone.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Cortilone.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Cortilone -40mg</div>
               <p class="card-text fs-6">Rs.90</p>
@@ -200,7 +200,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Flexon.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Flexon.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Flexon Tab</div>
               <p class="card-text fs-6">Rs.30</p>
@@ -210,7 +210,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Nims.png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Nims.png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Nims Tab</div>
               <p class="card-text fs-6">Rs.42</p>
@@ -220,7 +220,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
-            <img src="/Images/Niko .png" class="card-img-top" alt="medicine">
+            <img src="/Images/Medicine/Niko .png" class="card-img-top" alt="medicine">
             <div class="card-body">
               <div class="card-title fw-medium fs-5">Niko Tab</div>
               <p class="card-text fs-6">Rs.10</p>
