--- a/HTML/appointment.html
+++ b/HTML/appointment.html
@@ -121,7 +121,7 @@
               <div class="row g-3">
                 <div class="col-md-4">
                   <img
-                    src="/Images/Dr. Rabin Poudel, MD, MPH.png"
+                    src="/Images/Doctors/Dr. Rabin Poudel, MD, MPH.png"
                     class="img-fluid rounded-circle py-5"
                     alt="Doctor Rabin"
                   />
@@ -154,7 +154,7 @@
             <div class="row g-3">
               <div class="col-md-4">
                 <img
-                  src="/Images/Dr. Anika Sharma, MD, PhD.png"
+                  src="/Images/Doctors/Dr. Anika Sharma, MD, PhD.png"
                   class="img-fluid rounded-circle py-5"
                   alt="Doctor Anika"
                 />
@@ -185,7 +185,7 @@
               <div class="row g-3">
                 <div class="col-md-4">
                   <img
-                    src="/Images/Dr. Nisha Thapa, BDS, MS.png"
+                    src="/Images/Doctors/Dr. Nisha Thapa, BDS, MS.png"
                     class="img-fluid rounded-circle py-5"
                     alt="Doctor Rabin"
                   />
@@ -221,7 +221,7 @@
             <div class="row g-3">
               <div class="col-md-4">
                 <img
-                  src="/Images/Dr. Suraj Adhikari, MD, MSc.png"
+                  src="/Images/Doctors/Dr. Suraj Adhikari, MD, MSc.png"
                   class="img-fluid rounded-circle py-5"
                   alt="Doctor Anika"
                 />
@@ -252,7 +252,7 @@
               <div class="row g-3">
                 <div class="col-md-4">
                   <img
-                    src="/Images/Dr. Rajan Thapa, MD, MBA.png"
+                    src="/Images/Doctors/Dr. Rajan Thapa, MD, MBA.png"
                     class="img-fluid rounded-circle py-5"
                     alt="Doctor Rabin"
                   />
@@ -285,7 +285,7 @@
             <div class="row g-3">
               <div class="col-md-4">
                 <img
-                  src="/Images/Dr. Maya Bhandari, MD, PsyD.png"
+                  src="/Images/Doctors/Dr. Maya Bhandari, MD, PsyD.png"
                   class="img-fluid rounded-circle py-5"
                   alt="Doctor Anika"
                 />
@@ -316,7 +316,7 @@
               <div class="row g-3">
                 <div class="col-md-4">
                   <img
-                    src="/Images/Dr. Samir Pant, MD, PhD.png"
+                    src="/Images/Doctors/Dr. Samir Pant, MD, PhD.png"
                     class="img-fluid rounded-circle py-5"
                     alt="Doctor Rabin"
                   />
@@ -350,7 +350,7 @@
             <div class="row g-3">
               <div class="col-md-4">
                 <img
-                  src="/Images/Dr. Sunita Joshi, DO, FACOG.png"
+                  src="/Images/Doctors/Dr. Sunita Joshi, DO, FACOG.png"
                   class="img-fluid rounded-circle py-5"
                   alt="Doctor Anika"
                 />
