--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -56,7 +56,19 @@
   </header>
   <main>
         <div class="container">
-            
+            <div class="row">
+                <!-- Product 1 -->
+                <div class="col-md-6">
+                    <div class="card">
+                        <img src="/Images/cart.png" class="card-img-top" alt="Product Image">
+                        <div class="card-body">
+                            <h5 class="card-title">Product Name</h5>
+                            <p class="card-text">Product description goes here. This is a brief description of the product.</p>
+                            <a href="#" class="btn btn-primary">View Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
   </main>
 
