--- a/HTML/About.html
+++ b/HTML/About.html
@@ -70,35 +70,59 @@
           </div>
         </div>
       </nav>
-      <section class="Main About us">
-        <div class="container my-5">
-        <div class="row g-5 d-flex align-items-center">
-          <div class="col-12 col-lg-5 py-5">
+      <div
+        class="About container-fluid d-flex justify-content-center align-items-center"
+      >
+        <div class="text-center">
+          <h1 class="B fw-semibold">About Us</h1>
+        </div>
+      </div>
+      <div class="Our-Vision container">
+        <h1>Our Vision</h1>
+        <p class="ourVisionT py-2">
+          At Vcare, we envision a world where everyone has access to quality
+          healthcare, regardless of their location or circumstances. We believe
+          in the transformative power of technology to make healthcare more
+          accessible and convenient. Our goal is to create a patient-centered
+          healthcare system that empowers individuals to take control of their
+          health. We strive to be at the forefront of innovation, delivering
+          exceptional medical care through advanced technology. Our commitment
+          to compassionate service, exceptional medical care, and innovative
+          solutions drives us to create a better future for all.
+        </p>
+      </div>
+    </header>
+      <main>
+    <section class="Our-Team container mt-5 mb-5">  
+      <div class="card">
+        <div class="row justify-content-center">
+          <div class="col-md-6">
             <img
               src="/Images/groupDoctor-.png"
-              alt="BMI Indicator"
-              class="grp img-fluid ms-auto d-block"
+              class="img-fluid"
+              alt="Group Of Doctor."
             />
           </div>
-          <div class="col-12 col-lg-5">
-            <h4 class="fw-bold fs-4 mb-3">About US</h4>
-            <p class="fs-6">
-              Welcome to Vcare, your trusted partner in managing your health
-              with ease and convenience. At Vcare, we understand the importance
-              of timely healthcare, which is why we offer a seamless online
-              platform for scheduling medical appointments, delivering
-              medications right to your doorstep, and arranging in-person
-              hospital visits. Our commitment to your well-being is reflected in
-              our user-friendly services, designed to ensure that quality
-              healthcare is just a click away. Join us in our mission to make
-              healthcare accessible to all because at Vcare, we care for your
-              health.
-            </p>
+          <div class="col-md-4">
+            <div class="card-body">
+              <h5 class="Our-Story card-title fs-3">Our Story</h5>
+              <p class="card-text">
+                At Vcare, our team is committed to providing exceptional medical
+                care to our patients. Our patient-centered approach ensures that
+                every individual receives the care and attention they deserve.
+                With a focus on compassionate service, innovative solutions, and
+                advanced technology, we strive to make healthcare more
+                accessible and convenient. Our team of experienced professionals
+                is dedicated to delivering comprehensive medical care, tailored
+                to meet the unique needs of each patient. Join us on our mission
+                to provide exceptional healthcare to all.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    </header>
+  </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -107,13 +131,3 @@
     ></script>
   </body>
 </html>
-<div class="col-sm-6 col-md-4 col-lg-3">
-  <div class="card h-100">
-    <img src="/Images/Nexofast.png" class="card-img-top " alt="medicine">
-    <div class="card-body">
-      <div class="card-title fw-medium fs-5">Nexofast- 40mg</div>
-      <p class="card-text fs-6">Rs.160</p>
-      <a href="#" class="btn btn-primary">ADD TO CART</a>
-    </div>
-  </div>
-</div>
