--- a/HTML/appointment.html
+++ b/HTML/appointment.html
@@ -12,8 +12,31 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/CSS/Appointment.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&family=Rasa:ital,wght@0,300..700;1,300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-
   <body>
     <!-- header Design -->
     <!--Logo name font size milauna parxa header section ma-->
@@ -41,31 +64,31 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
-                  href="index.html"
+                  href="/HTML/index.html"
                   >Home</a
                 >
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
-                  href="#"
+                  href="/HTML/Service.html"
                   >Services</a
                 >
               </li>
 
-              <li class="nav-item">
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
-                  href="#"
+                  href="/HTML/About.html"
                   >About</a
                 >
               </li>
@@ -75,16 +98,18 @@
           <img
             src="/Images/profile-user.png"
             alt="Logo"
-            width="25"
-            height="25"
+            width="30"
+            height="30"
             class="user d-inline-block"
           />
         </div>
       </nav>
 
-      <div class="Appoinment container d-flex justify-content-center align-items-center rounded-5">
-        <div class="text-center ">
-          <h1 class="fw-semibold">Book an Appointment</h1>
+      <div
+        class="Appoinment container d-flex justify-content-center align-items-center rounded-5"
+      >
+        <div class="text-center">
+          <h1 class="B fw-semibold">Book an Appointment</h1>
         </div>
       </div>
     </header>
@@ -161,7 +186,7 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h6 class="card-title">Dr. Anika Sharma, MD, PhD</h6>
+                  <h6 class="card-title">Dr. Anika Sharma,MD,PhD</h6>
                   <!--Should be changed-->
                   <p class="card-text fs-6 fw-normal">Neurologist</p>
                   <!--Should be changed-->
@@ -292,14 +317,13 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h6 class="card-title">Dr. Maya Bhandari, MD, PsyD</h6>
+                  <h6 class="card-title">Dr.Maya Bhandari,MD</h6>
                   <!--Should be changed-->
                   <p class="card-text fs-6 fw-normal">Psychiatrist</p>
                   <!--Should be changed-->
                   <p class="card-text fs-6 fw-normal">
                     Experience:With 10 years of experience, she has expertise in
-                    both medical and psychological aspects of mental health,
-                    offering a holistic approach to patient care.
+                    both medical and psychological aspects of mental health.
                   </p>
                   <!--Should be changed-->
                   <p class="card-text fs-6 fw-semibold">Next Available Time:</p>
