--- a/HTML/Service.html
+++ b/HTML/Service.html
@@ -11,7 +11,31 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/CSS/Service.css" />
+    <link rel="stylesheet" href="/CSS/Service.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&family=Rasa:ital,wght@0,300..700;1,300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -40,27 +64,29 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
                   href="/HTML/index.html"
                   >Home</a
                 >
               </li>
-              <li class="nav-item">
+  
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
-                  href="#Service"
+                  href="/HTML/Service.html"
                   >Services</a
                 >
               </li>
-              <li class="nav-item">
+  
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
-                  href="#"
+                  href="/HTML/About.html"
                   >About</a
                 >
               </li>
@@ -69,10 +95,12 @@
         </div>
       </nav>
     </header>
+
+    <!--Details in Container-->
     <main>
       <div class="Service container mt-5 mb-2">
         <div class="text-start">
-          <h1 class="Service-text fw-semibold">Service We Provide</h1>
+          <h1 class="Service-text fw-medium">Service We Provide</h1>
         </div>
       </div>
       <div class="Details container mt-4">
@@ -127,7 +155,7 @@
       <!--Main Section Describing services-->
       <!--Virtual Appointment-->
       <div class="container-fluid mt-5">
-        <div class="container py-4">
+        <div class="container py-5">
           <div class="card">
             <div class="row justify-content-evenly gx-2">
               <div class="col-md-6">
@@ -139,7 +167,7 @@
               </div>
               <div class="col-md-4">
                 <div class="card-body">
-                  <h5 class="Virtual-Consul fs-3">Virtual Consultation</h5>
+                  <h5 class="bodyHeading fs-3 pt-5 mt-5">Virtual Consultation</h5>
                   <p class="card-text pt-3">
                     At Vcare, our team is committed to providing exceptional
                     medical care to our patients. Our patient-centered approach
@@ -165,7 +193,7 @@
               <div class="row justify-content-evenly">
                 <div class="col-md-5">
                   <div class="card-body">
-                    <h5 class="Virtual-Consul fs-3">
+                    <h5 class="bodyHeading fs-3 pt-5 mt-5">
                       Online Medicine Delivery
                     </h5>
                     <p class="card-text pt-3">
@@ -208,7 +236,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card-body">
-                    <h5 class="Virtual-Consul fs-3">Book Appointment</h5>
+                    <h5 class="bodyHeading fs-3 pt-5 mt-5">Book Appointment</h5>
                     <p class="card-text pt-3">
                       At Vcare, we understand that booking appointments can be a
                       time-consuming and frustrating process, especially during
@@ -235,7 +263,7 @@
                 <div class="row justify-content-evenly">
                   <div class="col-md-5">
                     <div class="card-body">
-                      <h5 class="Virtual-Consul fs-3">
+                      <h5 class="bodyHeading fs-3 pt-5 mt-5">
                         Track your Medical Record
                       </h5>
                       <p class="card-text pt-3">
