--- a/HTML/appointment.html
+++ b/HTML/appointment.html
@@ -100,7 +100,7 @@
             alt="Logo"
             width="30"
             height="30"
-            class="user d-inline-block"
+            class="user d-inline-block me-4"
           />
         </div>
       </nav>
