--- a/HTML/About.html
+++ b/HTML/About.html
@@ -11,7 +11,31 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/CSS/About.css" />
+    <link rel="stylesheet" href="/CSS/About.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&family=Rasa:ital,wght@0,300..700;1,300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -40,29 +64,29 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
                   href="/HTML/index.html"
                   >Home</a
                 >
               </li>
-
-              <li class="nav-item">
+  
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
-                  href="#Service"
+                  href="/HTML/Service.html"
                   >Services</a
                 >
               </li>
-
-              <li class="nav-item">
+  
+              <li class="nav-item me-3">
                 <a
-                  class="nav-link active fw-medium"
+                  class="nav-link active fw-medium fs-4"
                   aria-current="page"
-                  href="#"
+                  href="/HTML/About.html"
                   >About</a
                 >
               </li>
@@ -74,11 +98,11 @@
         class="About container-fluid d-flex justify-content-center align-items-center"
       >
         <div class="text-center">
-          <h1 class="B fw-semibold">About Us</h1>
+          <h1 class="About-Us fw-semibold">About Us</h1>
         </div>
       </div>
       <div class="Our-Vision container">
-        <h1>Our Vision</h1>
+        <h1 class="fw-medium">Our Vision</h1>
         <p class="ourVisionT py-2">
           At Vcare, we envision a world where everyone has access to quality
           healthcare, regardless of their location or circumstances. We believe
