--- a/HTML/Hospital.html
+++ b/HTML/Hospital.html
@@ -9,6 +9,30 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="/CSS/Hospital.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Mukta+Vaani:wght@200;300;400;500;600;700;800&family=Rasa:ital,wght@0,300..700;1,300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
 </head>
 
 <body>
@@ -26,26 +50,47 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active fw-medium" aria-current="page" href="index.html">Home</a>
+            <li class="nav-item me-3">
+              <a
+                class="nav-link active fw-medium fs-4"
+                aria-current="page"
+                href="/HTML/index.html"
+                >Home</a
+              >
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link active  fw-medium" aria-current="page" href="#">Services</a>
+            <li class="nav-item me-3">
+              <a
+                class="nav-link active fw-medium fs-4"
+                aria-current="page"
+                href="/HTML/Service.html"
+                >Services</a
+              >
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link active  fw-medium" aria-current="page" href="#">About</a>
+            <li class="nav-item me-3">
+              <a
+                class="nav-link active fw-medium fs-4"
+                aria-current="page"
+                href="/HTML/About.html"
+                >About</a
+              >
             </li>
           </ul>
         </div>
         <!-- <a href="#" class="Login-button  fw-medium">Login</a> -->
-        <img src="/Images/profile-user.png" alt="Logo" width="25" height="25" class="user d-inline-block">
+        <img
+          src="/Images/profile-user.png"
+          alt="Logo"
+          width="30"
+          height="30"
+          class="user d-inline-block me-4"
+        />
       </div>
     </nav>
     <div class="Hospital container d-flex justify-content-center align-items-center rounded-5">
       <div class="text-center ">
-        <h1 class="fw-semibold">Visit Hospital</h1>
+        <h1 class="fw-semibold Visit-Hospital">Visit Hospital</h1>
       </div>
     </div>
   </header>
@@ -59,7 +104,7 @@
             <img src="/Images/Hospital/teaching.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Teaching Hospital</h5>
-              <p class="card-text fs-6 fw-medium">Maharajgunj,Kathmandu</p>
+              <p class="card-text fs-6 fw-medium">Maharajgunj, Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>        
             </div>
           </div>
@@ -79,7 +124,7 @@
             <img src="/Images/Hospital/kantijpg.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Kanti Children’s Hospital</h5>
-              <p class="card-text fs-6 fw-medium">Maharajgunj,Kathmandu</p>
+              <p class="card-text fs-6 fw-medium">Maharajgunj, Kathmandu</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
@@ -125,7 +170,7 @@
             <img src="/Images/Hospital/nepal-medicit.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <h5 class="card-title">Nepal Mediciti</h5>
-              <p class="card-text fs-6 fw-medium">Bhaisepati Lalitpur</p>
+              <p class="card-text fs-6 fw-medium">Bhaisepati, Lalitpur</p>
               <a href="#" class="btn btn-dark">Book Appointment</a>
             </div>
           </div>
