--- a/HTML/History.html
+++ b/HTML/History.html
@@ -85,262 +85,263 @@
           />
         </div>
       </nav>
+      <div
+        class="About mb-5 container-fluid d-flex justify-content-center align-items-center"
+      >
+        <div class="text-center">
+          <h1 class="About-Us py-5 fw-semibold">Medical History</h1>
+        </div>
+      </div>
     </header>
+
     <div class="container">
-
-    <h3 style="padding: 30px; margin-left: 150px">Medical History</h3>
-
-    <div class="medical-history-container">
-      <div class="left">
-        <div class="date">
-          <h3>Date:</h3>
-          <p>2024/02/28</p>
-        </div>
-        <div class="reason">
-          <h3>Reason for Visit:</h3>
-          <p>[Reason]</p>
-        </div>
-      </div>
-      <div class="notes">
-        <h3>Notes</h3>
-        <p>[Additional notes]</p>
-      </div>
-      <div class="right">
-        <div class="examined-by">
-          <h3>Examined by:</h3>
-          <a class="doctor-details" href="DoctorD.html">
-            <div class="doctor-image">
-              <img src="/Images/doctor.png" alt="Doctor" />
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col w-50 mb-5">
+          <div class="card medical-history-card">
+            <div class="card-body">
+              <h5 class="card-title">Date: 2024/02/28</h5>
+              <p class="card-text">Reason for Visit: [Reason]</p>
+              <p class="card-text">Notes: [Additional notes]</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="examined-by">
+                  <h6>Examined by:</h6>
+                  <a href="DoctorD.html" class="doctor-details">
+                    <div class="doctor-image">
+                      <img
+                        src="/Images/doctor.png"
+                        alt="Doctor"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="doctor-name">Dr. Dipesh Mahat</div>
+                  </a>
+                </div>
+                <a href="Vmore.html" class="btn btn-primary">View More</a>
+              </div>
             </div>
-            <div class="doctor-name">Dr. Dipesh Mahat</div>
-          </a>
+          </div>
         </div>
-        <a href="Vmore.html" class="view-more-button">View More>></a>
-      </div>
-    </div>
 
-    <div class="medical-history-container">
-      <div class="left">
-        <div class="date">
-          <h3>Date:</h3>
-          <p>2024/02/28</p>
-        </div>
-        <div class="reason">
-          <h3>Reason for Visit:</h3>
-          <p>[Reason]</p>
-        </div>
-      </div>
-      <div class="notes">
-        <h3>Notes</h3>
-        <p>[Additional notes]</p>
-      </div>
-      <div class="right">
-        <div class="examined-by">
-          <h3>Examined by:</h3>
-          <a class="doctor-details" href="DoctorD.html">
-            <div class="doctor-image">
-              <img src="/Images/doctor.png" alt="Doctor" />
+        <div class="col w-50 mb-5">
+          <div class="card medical-history-card">
+            <div class="card-body">
+              <h5 class="card-title">Date: 2024/02/28</h5>
+              <p class="card-text">Reason for Visit: [Reason]</p>
+              <p class="card-text">Notes: [Additional notes]</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="examined-by">
+                  <h6>Examined by:</h6>
+                  <a href="DoctorD.html" class="doctor-details">
+                    <div class="doctor-image">
+                      <img
+                        src="/Images/doctor.png"
+                        alt="Doctor"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="doctor-name">Dr. Dipesh Mahat</div>
+                  </a>
+                </div>
+                <a href="Vmore.html" class="btn btn-primary">View More</a>
+              </div>
             </div>
-            <div class="doctor-name">Dr. Dipesh Mahat</div>
-          </a>
+          </div>
         </div>
-        <a href="Vmore.html" class="view-more-button">View More>></a>
-      </div>
-    </div>
 
-    <div class="medical-history-container">
-      <div class="left">
-        <div class="date">
-          <h3>Date:</h3>
-          <p>2024/02/28</p>
-        </div>
-        <div class="reason">
-          <h3>Reason for Visit:</h3>
-          <p>[Reason]</p>
-        </div>
-      </div>
-      <div class="notes">
-        <h3>Notes</h3>
-        <p>[Additional notes]</p>
-      </div>
-      <div class="right">
-        <div class="examined-by">
-          <h3>Examined by:</h3>
-          <a class="doctor-details" href="DoctorD.html">
-            <div class="doctor-image">
-              <img src="/Images/doctor.png" alt="Doctor" />
+        <div class="col w-50 mb-5">
+          <div class="card medical-history-card">
+            <div class="card-body">
+              <h5 class="card-title">Date: 2024/02/28</h5>
+              <p class="card-text">Reason for Visit: [Reason]</p>
+              <p class="card-text">Notes: [Additional notes]</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="examined-by">
+                  <h6>Examined by:</h6>
+                  <a href="DoctorD.html" class="doctor-details">
+                    <div class="doctor-image">
+                      <img
+                        src="/Images/doctor.png"
+                        alt="Doctor"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="doctor-name">Dr. Dipesh Mahat</div>
+                  </a>
+                </div>
+                <a href="Vmore.html" class="btn btn-primary">View More</a>
+              </div>
             </div>
-            <div class="doctor-name">Dr. Dipesh Mahat</div>
-          </a>
+          </div>
         </div>
-        <a href="Vmore.html" class="view-more-button">View More>></a>
-      </div>
-    </div>
 
-    <div class="medical-history-container">
-      <div class="left">
-        <div class="date">
-          <h3>Date:</h3>
-          <p>2024/02/28</p>
-        </div>
-        <div class="reason">
-          <h3>Reason for Visit:</h3>
-          <p>[Reason]</p>
-        </div>
-      </div>
-      <div class="notes">
-        <h3>Notes</h3>
-        <p>[Additional notes]</p>
-      </div>
-      <div class="right">
-        <div class="examined-by">
-          <h3>Examined by:</h3>
-          <a class="doctor-details" href="DoctorD.html">
-            <div class="doctor-image">
-              <img src="/Images/doctor.png" alt="Doctor" />
+        <div class="col w-50 mb-5">
+          <div class="card medical-history-card">
+            <div class="card-body">
+              <h5 class="card-title">Date: 2024/02/28</h5>
+              <p class="card-text">Reason for Visit: [Reason]</p>
+              <p class="card-text">Notes: [Additional notes]</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="examined-by">
+                  <h6>Examined by:</h6>
+                  <a href="DoctorD.html" class="doctor-details">
+                    <div class="doctor-image">
+                      <img
+                        src="/Images/doctor.png"
+                        alt="Doctor"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="doctor-name">Dr. Dipesh Mahat</div>
+                  </a>
+                </div>
+                <a href="Vmore.html" class="btn btn-primary">View More</a>
+              </div>
             </div>
-            <div class="doctor-name">Dr. Dipesh Mahat</div>
-          </a>
+          </div>
         </div>
-        <a href="Vmore.html" class="view-more-button">View More>></a>
-      </div>
-    </div>
 
-    <div class="medical-history-container">
-      <div class="left">
-        <div class="date">
-          <h3>Date:</h3>
-          <p>2024/02/28</p>
-        </div>
-        <div class="reason">
-          <h3>Reason for Visit:</h3>
-          <p>[Reason]</p>
-        </div>
-      </div>
-      <div class="notes">
-        <h3>Notes</h3>
-        <p>[Additional notes]</p>
-      </div>
-      <div class="right">
-        <div class="examined-by">
-          <h3>Examined by:</h3>
-          <a class="doctor-details" href="DoctorD.html">
-            <div class="doctor-image">
-              <img src="/Images/doctor.png" alt="Doctor" />
-            </div>
-            <div class="doctor-name">Dr. Dipesh Mahat</div>
-          </a>
-        </div>
-        <a href="Vmore.html" class="view-more-button">View More>></a>
-      </div>
-    </div>
-  </div>
-  <footer>
-    <div
-      class="social-connect bg-primary text-white text-center rounded-top-3"
-    >
-      <div class="container">
-        <div class="row">
-          <div class="d-flex justify-content-between">
-            <p class="fs-6 py-2 mt-2">
-              Get connected with us on Social networks:
-            </p>
-            <div class="d-flex justify-content-end align-items-center">
-              <img
-                src="/Images/facebook.png"
-                alt="Facebook Icon"
-                width="32"
-                height="32"
-                class="me-2 rounded-circle"
-              />
-              <img
-                src="/Images/Linkedin.png"
-                alt="Linkedin Icon"
-                width="32"
-                height="32"
-                class="me-2 rounded-circle"
-              />
-              <img
-                src="/Images/instagram.png"
-                alt="Instagram Icon"
-                width="32"
-                height="32"
-                class="me-2 rounded-circle"
-              />
+        <div class="col w-50 mb-5">
+          <div class="card medical-history-card">
+            <div class="card-body">
+              <h5 class="card-title">Date: 2024/02/28</h5>
+              <p class="card-text">Reason for Visit: [Reason]</p>
+              <p class="card-text">Notes: [Additional notes]</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="examined-by">
+                  <h6>Examined by:</h6>
+                  <a href="DoctorD.html" class="doctor-details">
+                    <div class="doctor-image">
+                      <img
+                        src="/Images/doctor.png"
+                        alt="Doctor"
+                        class="img-fluid"
+                      />
+                    </div>
+                    <div class="doctor-name">Dr. Dipesh Mahat</div>
+                  </a>
+                </div>
+                <a href="Vmore.html" class="btn btn-primary">View More</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 col-md-4">
-            <img
-              src="/Images/Logo.png"
-              alt="Logo"
-              width="100"
-              height="100"
-              class="align-middle mb-2"
-            />
-            <span class="fs-5 fw-bold">Vcare</span>
-          </div>
-          <div class="col-12 col-md-4 text-center">
-            <h5 class="mb-3">Our Services</h5>
-            <ul class="list-unstyled py-1">
-              <li>
-                <a href="/HTML/Medicine.html" class="text-decoration-none text-white"
-                  >Medicine</a
-                >
-              </li>
-              <li>
-                <a href="/HTML/appointment.html" class="text-decoration-none text-white"
-                  >Online Appointment</a
-                >
-              </li>
-              <li>
-                <a href="/HTML/Hospital.html" class="text-decoration-none text-white"
-                  >Physical Appointment</a
-                >
-              </li>
-              <li>
-                <a href="/HTML/History.html" class="text-decoration-none text-white"
-                  >Medical Records</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-12 col-md-4 text-end">
-            <h4 class="mb-3">Contact Us</h4>
-            <p class="fs-6">
-              <img
-                src="/Images/mail.png"
-                alt="Email Icon"
-                width="16"
-                height="16"
-                class="me-2"
-              />
-              Email: info@vare.com
-            </p>
-            <p class="fs-6">
-              <img
-                src="/Images/phone.png"
-                alt="Phone Icon"
-                width="20"
-                height="20"
-                class=""
-              />
-              Phone: +01 97667676
-            </p>
+    <footer>
+      <div
+        class="social-connect bg-primary text-white text-center rounded-top-3"
+      >
+        <div class="container">
+          <div class="row">
+            <div class="d-flex justify-content-between">
+              <p class="fs-6 py-2 mt-2">
+                Get connected with us on Social networks:
+              </p>
+              <div class="d-flex justify-content-end align-items-center">
+                <img
+                  src="/Images/facebook.png"
+                  alt="Facebook Icon"
+                  width="32"
+                  height="32"
+                  class="me-2 rounded-circle"
+                />
+                <img
+                  src="/Images/Linkedin.png"
+                  alt="Linkedin Icon"
+                  width="32"
+                  height="32"
+                  class="me-2 rounded-circle"
+                />
+                <img
+                  src="/Images/instagram.png"
+                  alt="Instagram Icon"
+                  width="32"
+                  height="32"
+                  class="me-2 rounded-circle"
+                />
+              </div>
+            </div>
           </div>
         </div>
+      </div>
+
+      <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md-4">
+              <img
+                src="/Images/Logo.png"
+                alt="Logo"
+                width="100"
+                height="100"
+                class="align-middle mb-2"
+              />
+              <span class="fs-5 fw-bold">Vcare</span>
+            </div>
+            <div class="col-12 col-md-4 text-center">
+              <h5 class="mb-3">Our Services</h5>
+              <ul class="list-unstyled py-1">
+                <li>
+                  <a
+                    href="/HTML/Medicine.html"
+                    class="text-decoration-none text-white"
+                    >Medicine</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/HTML/appointment.html"
+                    class="text-decoration-none text-white"
+                    >Online Appointment</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/HTML/Hospital.html"
+                    class="text-decoration-none text-white"
+                    >Physical Appointment</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="/HTML/History.html"
+                    class="text-decoration-none text-white"
+                    >Medical Records</a
+                  >
+                </li>
+              </ul>
+            </div>
+            <div class="col-12 col-md-4 text-end">
+              <h4 class="mb-3">Contact Us</h4>
+              <p class="fs-6">
+                <img
+                  src="/Images/mail.png"
+                  alt="Email Icon"
+                  width="16"
+                  height="16"
+                  class="me-2"
+                />
+                Email: info@vare.com
+              </p>
+              <p class="fs-6">
+                <img
+                  src="/Images/phone.png"
+                  alt="Phone Icon"
+                  width="20"
+                  height="20"
+                  class=""
+                />
+                Phone: +01 97667676
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <div class="copyright bg-black text-white text-center py-2">
+        &copy; 2024 Vcare
       </div>
     </footer>
-    <div class="copyright bg-black text-white text-center py-2">
-      &copy; 2024 Vcare
-    </div>
-  </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
